Create simple Queue System Plugin
